adding E2e tests with Cucumber and RestAssured from the app